get + post requests

--- a/backend/Backend/appsettings.json
+++ b/backend/Backend/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DatabaseConnection": "server=davidmsa23.mysql.database.azure.com;user=davidzhu;password=xqp3VbrO;database=davidmsa23"
+    "DatabaseConnection": "server=davidmsa23.mysql.database.azure.com;user=davidzhu;password=xqp3VbrO;database=davidmsa23",
   }
 }
  
