--- a/backend/Backend/Backend.csproj
+++ b/backend/Backend/Backend.csproj
@@ -30,14 +30,19 @@
     </PackageReference>
     <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="7.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="7.0.8" />
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
   </ItemGroup>
 
   <ItemGroup>
     <None Remove="Contexts\" />
     <None Remove="Repository\" />
+    <None Remove="Dto\" />
+    <None Remove="Helper\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Contexts\" />
     <Folder Include="Repositories\" />
+    <Folder Include="Dto\" />
+    <Folder Include="Helper\" />
   </ItemGroup>
 </Project>
