--- a/backend/Backend.Tests/Backend.Tests.csproj
+++ b/backend/Backend.Tests/Backend.Tests.csproj
@@ -23,10 +23,12 @@
   <ItemGroup>
     <None Remove="ControllerTests\" />
     <None Remove="RepositoryIntegrationTests\" />
+    <None Remove="ServiceUnitTests\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="ControllerTests\" />
     <Folder Include="RepositoryIntegrationTests\" />
+    <Folder Include="ServiceUnitTests\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Backend.Api\Backend.Api.csproj" />
