--- a/.github/workflows/CICD_Pipeline.yml
+++ b/.github/workflows/CICD_Pipeline.yml
@@ -6,23 +6,109 @@ on:
   pull_request:
     branches: [ "main" ]
 
+env:
+  REGISTRY: ghcr.io
+  AZURE_WEBAPP_NAME: your-app-name    # set this to your application's name
+  NODE_VERSION: '18.x'
+
 jobs:
-  dotnet-build:
+  build_backend:
     runs-on: ubuntu-latest
 
     steps:
     - name: Checkout repository
       uses: actions/checkout@v3
+
     - name: Setup .NET
       uses: actions/setup-dotnet@v3
       with:
         dotnet-version: 7.0.x
+
     - name: Restore dependencies
       run: dotnet restore
       working-directory: ./backend
+
     - name: Build
       run: dotnet build --no-restore
       working-directory: ./backend
+
     - name: Test
       run: dotnet test --no-build --verbosity normal
       working-directory: ./backend
+
+  build_frontend:
+    runs-on: ubuntu-latest
+    
+    steps:
+    - name: Checkout repository
+      uses: actions/checkout@v3
+    - name: Setup Node.js
+      uses: actions/setup-node@v3
+      with:
+        node-version: ${{ env.NODE_VERSION }}
+        cache: 'npm'
+    - name: Install dependencies
+      run: npm install
+      working-directory: ./frontend
+    - name: Build
+      run: npm run build
+      working-directory: ./frontend
+    - name: Test
+      run: npm run test --if-present
+      working-directory: ./frontend
+
+    - name: Upload artifact for deployment job
+      uses: actions/upload-artifact@v3
+      with:
+        name: node-app
+        path: frontend
+  
+  docker:
+    runs-on: ubuntu-latest
+    needs: [build_backend, build_frontend]
+
+    strategy:
+      matrix:
+        include:
+          - image: msafrontend
+            dockerfile: ./frontend/Dockerfile
+          - image: msabackend
+            dockerfile: ./backend/Dockerfile
+
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v3
+
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v2
+
+    - name: set lower case owner name
+      run: |
+        echo "OWNER_LC=${OWNER,,}" >>${GITHUB_ENV}
+      env:
+        OWNER: '${{ github.repository_owner }}'
+
+    - name: Log into registry ${{ env.REGISTRY }}
+      if: github.event_name != 'pull_request'
+      uses: docker/login-action@v2
+      with:
+        registry: ${{ env.REGISTRY }}
+        username: ${{ github.actor }}
+        password: ${{ secrets.GITHUB_TOKEN }}
+    
+    - name: Extract Docker metadata 
+      id: meta
+      uses: docker/metadata-action@v4
+      with:
+        images: ${{ env.REGISTRY }}/${{ env.OWNER_LC }}/${{ matrix.image }}
+
+    - name: Build and push
+      uses: docker/build-push-action@v4
+      with:
+        context: .
+        file: ${{ matrix.dockerfile }}
+        push: ${{ github.event_name != 'pull_request' }}
+        tags: ${{ steps.meta.outputs.tags }}
+        labels: ${{ steps.meta.outputs.labels }}
+        cache-from: type=gha
+        cache-to: type=gha,mode=max
