--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -19,5 +19,6 @@ FROM mcr.microsoft.com/dotnet/aspnet:7.0
 WORKDIR /app
 COPY --from=build /app .
 
+ENV ASPNETCORE_URLS=http://+:5000
 EXPOSE 5000
 ENTRYPOINT ["dotnet", "Backend.Api.dll"]
