--- a/.github/workflows/CICD_Pipeline.yml
+++ b/.github/workflows/CICD_Pipeline.yml
@@ -12,6 +12,36 @@ env:
   NODE_VERSION: '18.x'
 
 jobs:
+  build_frontend:
+    runs-on: ubuntu-latest
+    defaults:
+       run:
+         working-directory: ./frontend
+    steps:
+    - name: Checkout repository
+      uses: actions/checkout@v3
+
+    - name: Setup Node.js
+      uses: actions/setup-node@v3
+      with:
+        node-version: ${{ env.NODE_VERSION }}
+        cache: 'npm'
+
+    - name: Install dependencies
+      run: npm install
+
+    - name: Build
+      run: npm run build
+
+    - name: Test
+      run: npm run test --if-present
+
+    - name: Upload artifact for deployment job
+      uses: actions/upload-artifact@v3
+      with:
+        name: node-app
+        path: frontend
+  
   build_backend:
     runs-on: ubuntu-latest
 
@@ -36,33 +66,6 @@ jobs:
       run: dotnet test --no-build --verbosity normal
       working-directory: ./backend
 
-  build_frontend:
-    runs-on: ubuntu-latest
-    
-    steps:
-    - name: Checkout repository
-      uses: actions/checkout@v3
-    - name: Setup Node.js
-      uses: actions/setup-node@v3
-      with:
-        node-version: ${{ env.NODE_VERSION }}
-        cache: 'npm'
-    - name: Install dependencies
-      run: npm install
-      working-directory: ./frontend
-    - name: Build
-      run: npm run build
-      working-directory: ./frontend
-    - name: Test
-      run: npm run test --if-present
-      working-directory: ./frontend
-
-    - name: Upload artifact for deployment job
-      uses: actions/upload-artifact@v3
-      with:
-        name: node-app
-        path: frontend
-  
   docker:
     runs-on: ubuntu-latest
     needs: [build_backend, build_frontend]
