--- a/.github/workflows/CICD_Pipeline.yml
+++ b/.github/workflows/CICD_Pipeline.yml
@@ -44,7 +44,9 @@ jobs:
   
   build_backend:
     runs-on: ubuntu-latest
-
+    defaults:
+       run:
+         working-directory: ./backend
     steps:
     - name: Checkout repository
       uses: actions/checkout@v3
@@ -56,15 +58,12 @@ jobs:
 
     - name: Restore dependencies
       run: dotnet restore
-      working-directory: ./backend
 
     - name: Build
       run: dotnet build --no-restore
-      working-directory: ./backend
 
     - name: Test
       run: dotnet test --no-build --verbosity normal
-      working-directory: ./backend
 
   docker:
     runs-on: ubuntu-latest
