why does this not work

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -2,7 +2,7 @@ FROM mcr.microsoft.com/dotnet/sdk:7.0 AS build
 
 WORKDIR /src
 
-COPY Backend.sln ./
+COPY Backend.sln .
 COPY Backend.Api/*.csproj ./Backend.Api/
 COPY Backend.Core/*.csproj ./Backend.Core/
 COPY Backend.Infrastructure/*.csproj ./Backend.Infrastructure/
@@ -11,7 +11,7 @@ COPY Backend.Tests/*.csproj ./Backend.Tests/
 
 RUN dotnet restore
 
-COPY . ./
+COPY . .
 
 RUN dotnet publish -c Release -o /app --no-restore
 
