--- a/.github/workflows/CICD_Pipeline.yml
+++ b/.github/workflows/CICD_Pipeline.yml
@@ -63,13 +63,17 @@ jobs:
   docker:
     runs-on: ubuntu-latest
     needs: [build_backend, build_frontend]
-
+    permissions:
+      contents: read
+      packages: write
     strategy:
       matrix:
         include:
           - image: msafrontend
+            context: ./frontend
             dockerfile: frontend/Dockerfile
           - image: msabackend
+            context: ./backend
             dockerfile: backend/Dockerfile
 
     steps:
@@ -102,7 +106,7 @@ jobs:
     - name: Build and push
       uses: docker/build-push-action@v4
       with:
-        context: ./backend
+        context: ${{matrix.context}}
         file: ${{ matrix.dockerfile }}
         push: ${{ github.event_name != 'pull_request' }}
         tags: ${{ steps.meta.outputs.tags }}
