--- a/.github/workflows/CICD_Pipeline.yml
+++ b/.github/workflows/CICD_Pipeline.yml
@@ -71,10 +71,10 @@ jobs:
         include:
           - image: msafrontend
             context: ./frontend
-            dockerfile: Dockerfile
+            dockerfile: frontend/Dockerfile
           - image: msabackend
             context: ./backend
-            dockerfile: Dockerfile
+            dockerfile: backend/Dockerfile
 
     steps:
     - name: Checkout
@@ -104,7 +104,7 @@ jobs:
         images: ${{ env.REGISTRY }}/${{ env.OWNER_LC }}/${{ matrix.image }}
 
     - name: Build and push
-      uses: docker/build-push-action@v3
+      uses: docker/build-push-action@v4
       with:
         context: ${{matrix.context}}
         file: ${{ matrix.dockerfile }}
