--- a/.github/workflows/CICD_Pipeline.yml
+++ b/.github/workflows/CICD_Pipeline.yml
@@ -7,7 +7,7 @@ on:
     branches: [ "main" ]
 
 env:
-  REGISTRY: davidzhumsa23.azurecr.io
+  REGISTRY: ghcr.io
   AZURE_WEBAPP_NAME: davidzhumsa23    # set this to your application's name
   NODE_VERSION: '18.x'
 
@@ -94,14 +94,14 @@ jobs:
       uses: docker/login-action@v2
       with:
         registry: ${{ env.REGISTRY }}
-        username: ${{ secrets.AZURE_CLIENT_ID }}
-        password: ${{ secrets.AZURE_CLIENT_SECRET }}
+        username: ${{ github.actor }}
+        password: ${{ secrets.GITHUB_TOKEN }}
     
     - name: Extract Docker metadata 
       id: meta
       uses: docker/metadata-action@v4
       with:
-        images: ${{ env.REGISTRY }}
+        images: ${{ env.REGISTRY }}/${{ env.OWNER_LC }}/${{ matrix.image }}
 
     - name: Build and push to container registry
       uses: docker/build-push-action@v4
@@ -114,29 +114,29 @@ jobs:
         cache-from: type=gha
         cache-to: type=gha,mode=max
       
-  # deploy:
-  #   runs-on: ubuntu-latest
-  #   permissions:
-  #     contents: none
-  #   needs: docker
-  #   strategy:
-  #     matrix:
-  #       include:
-  #         - image: msafrontend
-  #         - image: msabackend
+  deploy:
+    runs-on: ubuntu-latest
+    permissions:
+      contents: none
+    needs: docker
+    strategy:
+      matrix:
+        include:
+          - image: msafrontend
+          - image: msabackend
 
-  #   steps:
-  #   - name: Set lower case owner name
-  #     run: |
-  #       echo "OWNER_LC=${OWNER,,}" >>${GITHUB_ENV}
-  #     env:
-  #       OWNER: '${{ github.repository_owner }}'
+    steps:
+    - name: Set lower case owner name
+      run: |
+        echo "OWNER_LC=${OWNER,,}" >>${GITHUB_ENV}
+      env:
+        OWNER: '${{ github.repository_owner }}'
 
-  #   - name: 'Deploy to Azure Web App'
-  #     id: deploy-to-webapp
-  #     uses: azure/webapps-deploy@v2
-  #     with:
-  #       app-name: ${{ env.AZURE_WEBAPP_NAME }}
-  #       publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
-  #       images: '${{ env.REGISTRY }}/${{ env.OWNER_LC }}/${{ matrix.image }}:main'
+    - name: 'Deploy to Azure Web App'
+      id: deploy-to-webapp
+      uses: azure/webapps-deploy@v2
+      with:
+        app-name: ${{ env.AZURE_WEBAPP_NAME }}
+        publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
+        images: '${{ env.REGISTRY }}/${{ env.OWNER_LC }}/${{ matrix.image }}:main'
  
