--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,18 @@
 version: '3.4'
 services:
   frontend:
+    build: ./frontend
     platform: linux/x86_64
-    image: ghcr.io/dyzhuu/msafrontend:main
+    image: ghcr.io/dyzhuu/msa:frontend
     container_name: frontend
+    ports:
+    - 80:3000
+    - 443:3000
 
   backend:
+    build: ./backend
     platform: linux/x86_64
-    image: ghcr.io/dyzhuu/msabackend:main
+    image: ghcr.io/dyzhuu/msa:backend
     container_name: backend
+    ports:
+    - 8080:5000
