--- a/.github/workflows/CICD_Pipeline.yml
+++ b/.github/workflows/CICD_Pipeline.yml
@@ -69,10 +69,10 @@ jobs:
     strategy:
       matrix:
         include:
-          - image: msafrontend
+          - image: msa:frontend
             context: ./frontend
             dockerfile: frontend/Dockerfile
-          - image: msabackend
+          - image: msa:backend
             context: ./backend
             dockerfile: backend/Dockerfile
 
@@ -114,29 +114,29 @@ jobs:
         cache-from: type=gha
         cache-to: type=gha,mode=max
       
-  deploy:
-    runs-on: ubuntu-latest
-    permissions:
-      contents: none
-    needs: docker
-    strategy:
-      matrix:
-        include:
-          - image: msafrontend
-          - image: msabackend
+  # deploy:
+  #   runs-on: ubuntu-latest
+  #   permissions:
+  #     contents: none
+  #   needs: docker
+  #   strategy:
+  #     matrix:
+  #       include:
+  #         - image: msafrontend
+  #         - image: msabackend
 
-    steps:
-    - name: Set lower case owner name
-      run: |
-        echo "OWNER_LC=${OWNER,,}" >>${GITHUB_ENV}
-      env:
-        OWNER: '${{ github.repository_owner }}'
+  #   steps:
+  #   - name: Set lower case owner name
+  #     run: |
+  #       echo "OWNER_LC=${OWNER,,}" >>${GITHUB_ENV}
+  #     env:
+  #       OWNER: '${{ github.repository_owner }}'
 
-    - name: 'Deploy to Azure Web App'
-      id: deploy-to-webapp
-      uses: azure/webapps-deploy@v2
-      with:
-        app-name: ${{ env.AZURE_WEBAPP_NAME }}
-        publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
-        images: '${{ env.REGISTRY }}/${{ env.OWNER_LC }}/${{ matrix.image }}:main'
+  #   - name: 'Deploy to Azure Web App'
+  #     id: deploy-to-webapp
+  #     uses: azure/webapps-deploy@v2
+  #     with:
+  #       app-name: ${{ env.AZURE_WEBAPP_NAME }}
+  #       publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
+  #       images: '${{ env.REGISTRY }}/${{ env.OWNER_LC }}/${{ matrix.image }}'
  
