--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ services:
   frontend:
     build: ./frontend
     platform: linux/x86_64
-    image: ghcr.io/dyzhuu/msa:frontend
+    image: ghcr.io/dyzhuu/msafrontend:main
     container_name: frontend
     ports:
     - 80:80
@@ -12,7 +12,7 @@ services:
   backend:
     build: ./backend
     platform: linux/x86_64
-    image: ghcr.io/dyzhuu/msa:backend
+    image: ghcr.io/dyzhuu/msabackend:main
     container_name: backend
     ports:
-    - 80:5000
+    - 8080:80
