--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -19,7 +19,9 @@ FROM mcr.microsoft.com/dotnet/aspnet:7.0
 WORKDIR /app
 COPY --from=build /app .
 
-ENV ASPNETCORE_URLS=http://+:8080
-EXPOSE 8080
+ENV ASPNETCORE_URLS=http://+:5000
+ENV ASPNETCORE_HTTPS_PORT=5001
+EXPOSE 5000
+EXPOSE 5001
 
 ENTRYPOINT ["dotnet", "Backend.Api.dll"]
