--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,8 @@
         "autoprefixer": "10.4.14",
         "class-variance-authority": "^0.6.1",
         "clsx": "^1.2.1",
+        "graphql": "16.7.1",
+        "graphql-request": "6.1.0",
         "lucide-react": "^0.259.0",
         "next": "13.4.9",
         "postcss": "8.4.25",
