--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,34 +1,48 @@
 {
-    "name": "frontend",
-    "version": "0.1.0",
-    "private": true,
-    "scripts": {
-        "dev": "next dev",
-        "build": "next build",
-        "start": "next start -p 80",
-        "lint": "next lint"
-    },
-    "dependencies": {
-        "autoprefixer": "10.4.14",
-        "class-variance-authority": "^0.6.1",
-        "clsx": "^1.2.1",
-        "graphql": "16.7.1",
-        "graphql-request": "6.1.0",
-        "lucide-react": "^0.259.0",
-        "next": "13.4.9",
-        "postcss": "8.4.25",
-        "react": "18.2.0",
-        "react-dom": "18.2.0",
-        "tailwind-merge": "^1.13.2",
-        "tailwindcss-animate": "^1.0.6"
-    },
-    "devDependencies": {
-        "@types/node": "20.4.2",
-        "@types/react": "^18.2.14",
-        "@types/react-dom": "18.2.7",
-        "eslint": "8.44.0",
-        "eslint-config-next": "13.4.9",
-        "tailwindcss": "3.3.2",
-        "typescript": "5.1.6"
-    }
+  "name": "frontend",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start -p 80",
+    "lint": "next lint",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
+  },
+  "dependencies": {
+    "@radix-ui/react-aspect-ratio": "^1.0.3",
+    "@radix-ui/react-scroll-area": "^1.0.4",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-tooltip": "^1.0.6",
+    "autoprefixer": "10.4.14",
+    "class-variance-authority": "^0.6.1",
+    "clsx": "^1.2.1",
+    "graphql": "^16.7.1",
+    "lucide-react": "^0.259.0",
+    "next": "13.4.9",
+    "postcss": "8.4.25",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "tailwind-merge": "^1.13.2",
+    "tailwindcss-animate": "^1.0.6"
+  },
+  "devDependencies": {
+    "@storybook/addon-essentials": "^7.0.27",
+    "@storybook/addon-interactions": "^7.0.27",
+    "@storybook/addon-links": "^7.0.27",
+    "@storybook/blocks": "^7.0.27",
+    "@storybook/nextjs": "^7.0.27",
+    "@storybook/react": "^7.0.27",
+    "@storybook/testing-library": "^0.0.14-next.2",
+    "@types/node": "20.4.2",
+    "@types/react": "^18.2.14",
+    "@types/react-dom": "18.2.7",
+    "eslint": "8.44.0",
+    "eslint-config-next": "13.4.9",
+    "eslint-plugin-storybook": "^0.6.12",
+    "storybook": "^7.0.27",
+    "tailwindcss": "3.3.2",
+    "typescript": "5.1.6"
+  }
 }
