--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -2,6 +2,11 @@
   "extends": [
     "next/babel",
     "next/core-web-vitals",
-    "plugin:storybook/recommended"
-  ]
+    "plugin:storybook/recommended",
+    "prettier"
+  ],
+  "plugins": ["prettier"],
+  "rules": {
+    "prettier/prettier": "error"
+  }
 }
