--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@radix-ui/react-aspect-ratio": "^1.0.3",
+    "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-scroll-area": "^1.0.4",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tooltip": "^1.0.6",
@@ -41,6 +42,7 @@
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.9",
     "eslint-plugin-storybook": "^0.6.12",
+    "prettier": "^3.0.0",
     "storybook": "^7.0.27",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.6"
