--- a/.github/workflows/CICD_Pipeline.yml
+++ b/.github/workflows/CICD_Pipeline.yml
@@ -9,6 +9,7 @@ on:
 env:
   REGISTRY: ghcr.io
   AZURE_WEBAPP_NAME: davidzhumsa23    # set this to your application's name
+  CONTAINER_APP_NAME: 
   NODE_VERSION: '18.x'
 
 jobs:
@@ -96,12 +97,6 @@ jobs:
         registry: ${{ env.REGISTRY }}
         username: ${{ github.actor }}
         password: ${{ secrets.GITHUB_TOKEN }}
-    
-    - name: Extract Docker metadata 
-      id: meta
-      uses: docker/metadata-action@v4
-      with:
-        images: ${{ env.REGISTRY }}/${{ env.OWNER_LC }}/${{ matrix.image }}
 
     - name: Build and push to container registry
       uses: docker/build-push-action@v4
@@ -109,10 +104,7 @@ jobs:
         context: ${{matrix.context}}
         file: ${{ matrix.dockerfile }}
         push: ${{ github.event_name != 'pull_request' }}
-        tags: ${{ steps.meta.outputs.tags }}
-        labels: ${{ steps.meta.outputs.labels }}
-        cache-from: type=gha
-        cache-to: type=gha,mode=max
+        tags: ${{ env.REGISTRY }}/${{ env.OWNER_LC  }}/${{ matrix.image }}:${{ github.sha }}
       
   # deploy:
   #   runs-on: ubuntu-latest
@@ -132,11 +124,11 @@ jobs:
   #     env:
   #       OWNER: '${{ github.repository_owner }}'
 
-  #   - name: 'Deploy to Azure Web App'
-  #     id: deploy-to-webapp
-  #     uses: azure/webapps-deploy@v2
-  #     with:
-  #       app-name: ${{ env.AZURE_WEBAPP_NAME }}
-  #       publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
-  #       images: '${{ env.REGISTRY }}/${{ env.OWNER_LC }}/${{ matrix.image }}:main'
+    # - name: 'Deploy to Azure Web App'
+    #   id: deploy-to-webapp
+    #   uses: azure/webapps-deploy@v2
+    #   with:
+    #     app-name: ${{ env.AZURE_WEBAPP_NAME }}
+    #     publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
+    #     images: '${{ env.REGISTRY }}/${{ env.OWNER_LC }}/${{ matrix.image }}:main'
  
