--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,24 @@
 version: '3.4'
 services:
-  frontend:
-    build: ./frontend
-    platform: linux/x86_64
-    image: ghcr.io/dyzhuu/msafrontend:main
-    container_name: frontend
-    ports:
-    - 80:80
-    - 443:80
-
   backend:
     build: ./backend
-    platform: linux/x86_64
     image: ghcr.io/dyzhuu/msabackend:main
+    # image: dyzhuu/msabackend:latest
     container_name: backend
     ports:
-    - 5001:5000
+    - 8080:8080
+    expose: 
+    - "8080"
+    restart: always
+
+  frontend:
+    build: ./frontend
+    image: ghcr.io/dyzhuu/msafrontend:main
+    # image: dyzhuu/msafrontend:latest
+    container_name: frontend
+    links:
+      - "backend"
+    ports:
+    - 80:80
+    depends_on:
+    - backend
