--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
         "autoprefixer": "10.4.14",
         "class-variance-authority": "^0.6.1",
         "clsx": "^1.2.1",
+        "dotenv": "^16.3.1",
         "graphql": "16.7.1",
         "graphql-request": "6.1.0",
         "lucide-react": "^0.259.0",
@@ -30,5 +31,6 @@
         "eslint-config-next": "13.4.9",
         "tailwindcss": "3.3.2",
         "typescript": "5.1.6"
-    }
+    },
+    "proxy": "http://backend:5000"
 }
