--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -1,4 +1,4 @@
-name: CICD_Pipeline
+name: backend
 
 on:
   push:
@@ -8,37 +8,11 @@ on:
 
 env:
   REGISTRY: ghcr.io
-  AZURE_WEBAPP_NAME: davidzhumsa23    # set this to your application's name
-  CONTAINER_APP_NAME: 
-  NODE_VERSION: '18.x'
+  AZURE_WEBAPP_NAME: dzmsabackend    # set this to your application's name
+  IMAGE: msabackend
 
 jobs:
-  build_frontend:
-    runs-on: ubuntu-latest
-    defaults:
-       run:
-         working-directory: ./frontend
-    steps:
-    - name: Checkout repository
-      uses: actions/checkout@v3
-
-    - name: Setup Node.js
-      uses: actions/setup-node@v3
-      with:
-        node-version: ${{ env.NODE_VERSION }}
-        cache: 'npm'
-        cache-dependency-path: './frontend'
-
-    - name: Install dependencies
-      run: npm install
-
-    - name: Build
-      run: npm run build
-
-    - name: Test
-      run: npm run test --if-present
-  
-  build_backend:
+  build:
     runs-on: ubuntu-latest
     defaults:
        run:
@@ -63,19 +37,10 @@ jobs:
 
   docker:
     runs-on: ubuntu-latest
-    needs: [build_backend, build_frontend]
+    needs: build
     permissions:
       contents: read
       packages: write
-    strategy:
-      matrix:
-        include:
-          - image: msafrontend
-            context: ./frontend
-            dockerfile: frontend/Dockerfile
-          - image: msabackend
-            context: ./backend
-            dockerfile: backend/Dockerfile
 
     steps:
     - name: Checkout
@@ -101,21 +66,16 @@ jobs:
     - name: Build and push to container registry
       uses: docker/build-push-action@v4
       with:
-        context: ${{matrix.context}}
-        file: ${{ matrix.dockerfile }}
+        context: ./backend
+        file: backend/Dockerfile
         push: ${{ github.event_name != 'pull_request' }}
-        tags: ${{ env.REGISTRY }}/${{ env.OWNER_LC  }}/${{ matrix.image }}:${{ github.sha }}
+        tags: ${{ env.REGISTRY }}/${{ env.OWNER_LC  }}/${{ env.IMAGE  }}:${{ github.sha }}
       
   # deploy:
   #   runs-on: ubuntu-latest
   #   permissions:
   #     contents: none
   #   needs: docker
-  #   strategy:
-  #     matrix:
-  #       include:
-  #         - image: msafrontend
-  #         - image: msabackend
 
   #   steps:
   #   - name: Set lower case owner name
@@ -124,11 +84,11 @@ jobs:
   #     env:
   #       OWNER: '${{ github.repository_owner }}'
 
-    # - name: 'Deploy to Azure Web App'
-    #   id: deploy-to-webapp
-    #   uses: azure/webapps-deploy@v2
-    #   with:
-    #     app-name: ${{ env.AZURE_WEBAPP_NAME }}
-    #     publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
-    #     images: '${{ env.REGISTRY }}/${{ env.OWNER_LC }}/${{ matrix.image }}:main'
+  #   - name: 'Deploy to Azure Web App'
+  #     id: deploy-to-webapp
+  #     uses: azure/webapps-deploy@v2
+  #     with:
+  #       app-name: ${{ env.AZURE_WEBAPP_NAME }}
+  #       publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE_BACKEND }}
+  #       images: '${{ env.REGISTRY }}/${{ env.OWNER_LC }}/${{ matrix.image }}:main'
  
