--- a/.github/workflows/main_davidzhumsa.yml
+++ b/.github/workflows/main_davidzhumsa.yml
@@ -1,7 +1,12 @@
 name: main_davidzhumsa
 
 on:
-    workflow_dispatch:
+    workflow_call:
+        secrets:
+            GITHUB_TOKEN:
+                required: true
+            AZURE_WEBAPP_PUBLISH_PROFILE_FRONTEND:
+                required: true            
 
 env:
   REGISTRY: ghcr.io
@@ -20,11 +25,7 @@ jobs:
       uses: actions/checkout@v3
       with:
         ref: ${{ github.event.client_payload.sha }}
-    
-    - uses: r-lib/actions/setup-r@master
-      
-    - uses: r-lib/actions/setup-pandoc@master
-
+          
     - name: Setup Node.js
       uses: actions/setup-node@v3
       with:
@@ -96,5 +97,5 @@ jobs:
       with:
         app-name: ${{ env.AZURE_WEBAPP_NAME }}
         publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE_FRONTEND }}
-        images: '${{ env.REGISTRY }}/${{ env.OWNER_LC }}/${{ env.IMAGE }}:main'
+        images: '${{ env.REGISTRY }}/${{ env.OWNER_LC }}/${{ env.IMAGE }}:${{ github.sha }}'
  
