--- a/.github/workflows/main_dzmsabackend.yml
+++ b/.github/workflows/main_dzmsabackend.yml
@@ -94,6 +94,7 @@ jobs:
         images: '${{ env.REGISTRY }}/${{ env.OWNER_LC }}/${{ env.IMAGE }}:${{ github.sha }}'
   
   trigger-frontend-workflow:
+    needs: deploy-backend
     uses: dyzhuu/MSA23-Project/.github/workflows/main_davidzhumsa.yml@main
     secrets:
       AZURE_WEBAPP_PUBLISH_PROFILE_FRONTEND: ${{secrets.AZURE_WEBAPP_PUBLISH_PROFILE_FRONTEND}}
