--- a/.github/workflows/main_davidzhumsa.yml
+++ b/.github/workflows/main_davidzhumsa.yml
@@ -1,10 +1,10 @@
 name: main_davidzhumsa
 
 on:
-    workflow_call:
-        secrets:
-            AZURE_WEBAPP_PUBLISH_PROFILE_FRONTEND:
-                required: true            
+  push:
+    branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
 
 env:
   REGISTRY: ghcr.io
