--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -1,12 +1,3 @@
 {
-  "extends": [
-    "next/babel",
-    "next/core-web-vitals",
-    "plugin:storybook/recommended",
-    "prettier"
-  ],
-  "plugins": ["prettier"],
-  "rules": {
-    "prettier/prettier": "error"
-  }
+  "extends": "next/core-web-vitals"
 }
