--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,6 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start -p 80",
+    "prettier-format": "prettier --config .prettierrc 'src/**/*.ts' --write",
     "lint": "next lint",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build"
@@ -22,6 +23,7 @@
     "autoprefixer": "10.4.14",
     "class-variance-authority": "^0.6.1",
     "clsx": "^1.2.1",
+    "eslint-plugin-prettier": "^5.0.0",
     "graphql": "^16.7.1",
     "lucide-react": "^0.259.0",
     "next": "13.4.9",
@@ -45,8 +47,9 @@
     "@types/node": "20.4.2",
     "@types/react": "^18.2.14",
     "@types/react-dom": "18.2.7",
-    "eslint": "8.44.0",
-    "eslint-config-next": "13.4.9",
+    "eslint": "^8.44.0",
+    "eslint-config-next": "^13.4.9",
+    "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-storybook": "^0.6.12",
     "prettier": "^3.0.0",
     "storybook": "^7.0.27",
