--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,12 +19,14 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.4",
     "@radix-ui/react-tooltip": "^1.0.6",
+    "@types/jsonwebtoken": "^9.0.2",
     "autoprefixer": "10.4.14",
     "class-variance-authority": "^0.6.1",
     "clsx": "^1.2.1",
     "cookies-next": "^2.1.2",
     "eslint-plugin-prettier": "^5.0.0",
     "graphql": "^16.7.1",
+    "jsonwebtoken": "^9.0.1",
     "lucide-react": "^0.259.0",
     "next": "13.4.9",
     "next-auth": "^4.22.3",
