--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "class-variance-authority": "^0.6.1",
     "clsx": "^1.2.1",
     "cookies-next": "^2.1.2",
+    "dotenv": "^16.3.1",
     "eslint-plugin-prettier": "^5.0.0",
     "graphql": "^16.7.1",
     "jsonwebtoken": "^9.0.1",
