--- a/backend/Backend.Api/appsettings.json
+++ b/backend/Backend.Api/appsettings.json
@@ -10,7 +10,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DatabaseConnection": "server=davidmsa23.mysql.database.azure.com;user=davidzhu;password=xqp3VbrO;database=davidmsa23",
+    "DatabaseConnection": "server=davidmsa23.mysql.database.azure.com;user=davidzhu;password=lsQm&!0w102O;database=davidmsa23"
   }
 }
  
