style: small aesthetic changes

--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "davidzhumsa",
-  "short_name": "dzmsa",
+  "name": "MSAnime",
+  "short_name": "MSAnime",
   "description": "David Zhu's NZMSA23 software development project",
   "theme_color": "#ffffff",
   "background_color": "#ffffff",
